<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="BA2_Param" Id="{ca256b08-57a7-4afe-9a3b-de40289bd794}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '1.0.0.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "GVL, Constants"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "GVL, Constants"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Globale Konstanten"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Global constants"'}
{endregion}

{attribute 'qualified_only'}
{attribute 'strict'}
VAR_GLOBAL CONSTANT 
	fAP                					: REAL 						:= 1013.25;	// Hydrostatischer Luftdruck	//	atmospheric pressure

	nDefTimeDelay_ToAbnormal			: UDINT						:= 1;
	nDefTimeDelay_ToNormal				: UDINT						:= 0;

	fDefCOVIncrement					: REAL						:= 0.1;	

	fDefLimitDeadband					: REAL						:= 0.0;

	nLoop_DefOpMode						: E_BA_PIDMode				:= E_BA_PIDMode.eP1ID;	
	
	{warning disable C0228}
	stTrend_DefStartTime				: ST_BA_DateTime			;(*:= F_BA_ToSTDateTime(DT#2099-01-01-00:13);*)
	stTrend_DefStopTime					: ST_BA_DateTime			;(* := F_BA_ToSTDateTime(DT#2099-01-01-00:13);*)
	{warning restore C0228}
	nTrend_BufferSize					: UDINT						:= 500;	// Count of entries in a Trend-Buffer	
	bTrend_DefLogEnable					: BOOL						:= FALSE;
	bTrend_DefStopOnFull				: BOOL						:= FALSE;
	nTrend_DefLogInterval				: UDINT						:= 90;	// (in [s])
	nTrend_DefNotificationThreshold		: UDINT						:= 50;
	eTrend_DefLoggingType				: E_BA_LoggingType			:= E_BA_LoggingType.ePolled;				
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>