<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="EC_ID" Id="{17afec52-cb92-422d-b219-e39546c412b3}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '1.2.0.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "General, Notification classes, Event classes, AMEV"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "General, Notification classes, Event classes, AMEV"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Ereignisklassen"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Event classes"'}
{endregion}

{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	NC10							: UDINT := 10; // Gefahr für Leben // Danger to life	
	NC20							: UDINT := 20; // Sicherheitsmeldung // Safety message	
	NC30							: UDINT := 30; // Alarmeldung // Alarm message	
	NC40							: UDINT := 40; // Störungsmeldung // Fault message	
	NC50							: UDINT := 50; // Wartungsmeldung // Maintenance message	
	NC51							: UDINT := 51; // Wartungsmeldung // Maintenance message	
	NC60							: UDINT := 60; // Systemmeldung // System message	
	NC70							: UDINT := 70; // Handeingriff // Manual operation	
	NC80							: UDINT := 80; // Sonstige Meldungen // Other message	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>