<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="LblFunctions_EN" Id="{eec6fd23-bb5e-4d0c-85d6-a308fd1303cd}">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '1.2.0.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "GVL, AKS, Labels, ObjectName, Description"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "GVL, DPAD, Labels, ObjectName, Description"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Anlagenkennzeichnungssystem, Labels functions"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Data Point Addressing Description, Labels functions"'}
{endregion}

{attribute 'global_init_slot' := '40510'}
VAR_GLOBAL
  LblFunctions_Requirement                                       :FB_BA_Label:=( sObjName:='REQ',sDescr:='Requirement');
  LblFunctions_SystemSwitch                                      :FB_BA_Label:=( sObjName:='PLS',sDescr:='Plant switch');
  LblFunctions_StatusOccupiedRoom                                :FB_BA_Label:=( sObjName:='OCC',sDescr:='Occupied status room');
  LblFunctions_LimitCalculatedValue                              :FB_BA_Label:=( sObjName:='LMC',sDescr:='Calculated limit value');
  LblFunctions_SetpointCalculated                                :FB_BA_Label:=( sObjName:='SPC',sDescr:='Calculated setpoint');
  LblFunctions_ReadyForOperation                                 :FB_BA_Label:=( sObjName:='RFO',sDescr:='Ready for operation');
  LblFunctions_OperationalMessage                                :FB_BA_Label:=( sObjName:='OM_',sDescr:='Operational message');
  LblFunctions_HoursOfOperation                                  :FB_BA_Label:=( sObjName:='OH_',sDescr:='Operating hours');
  LblFunctions_LimitValueHoursOfOperation                        :FB_BA_Label:=( sObjName:='OHL',sDescr:='Operating hours limit value');
  LblFunctions_ObjectCalendar                                    :FB_BA_Label:=( sObjName:='CAL',sDescr:='Calendar object');
  LblFunctions_ObjectCommand                                     :FB_BA_Label:=( sObjName:='COM',sDescr:='Command object');
  LblFunctions_DifferentialConstantController                    :FB_BA_Label:=( sObjName:='TV_',sDescr:='Differential constant controller');
  LblFunctions_SwitchOnErrorUnauthorisedON                       :FB_BA_Label:=( sObjName:='SWE',sDescr:='Switch-on error, unauthorised ON');
  LblFunctions_EnergyLevel                                       :FB_BA_Label:=( sObjName:='EL_',sDescr:='Energy level');
  LblFunctions_EnergyLevelCalculated                             :FB_BA_Label:=( sObjName:='ELC',sDescr:='Energy level calculated');
  LblFunctions_UnlockingDevice                                   :FB_BA_Label:=( sObjName:='UNL',sDescr:='Unlocking device');
  LblFunctions_ObjectEventEnrollment                             :FB_BA_Label:=( sObjName:='EE_',sDescr:='Event enrollment object');
  LblFunctions_Enabled                                           :FB_BA_Label:=( sObjName:='EN_',sDescr:='Enabled');
  LblFunctions_DangerAlarm                                       :FB_BA_Label:=( sObjName:='DA_',sDescr:='Danger alarm');
  LblFunctions_Threshold                                         :FB_BA_Label:=( sObjName:='LM_',sDescr:='Limit value');
  LblFunctions_LimitMAX                                          :FB_BA_Label:=( sObjName:='LMX',sDescr:='MAX limit');
  LblFunctions_LimitMIN                                          :FB_BA_Label:=( sObjName:='LMI',sDescr:='MIN limit');
  LblFunctions_LimitNight                                        :FB_BA_Label:=( sObjName:='LMN',sDescr:='Night limit');
  LblFunctions_LimitDay                                          :FB_BA_Label:=( sObjName:='LMD',sDescr:='Day limit');
  LblFunctions_ObjectGroup                                       :FB_BA_Label:=( sObjName:='GP_',sDescr:='Group object');
  LblFunctions_localPriorityAndOperatingUnitsManualMessage       :FB_BA_Label:=( sObjName:='MNM',sDescr:='local priority and operating units manual message');
  LblFunctions_HeatingCharacteristicCurveExponent                :FB_BA_Label:=( sObjName:='HEX',sDescr:='Heating characteristic curve exponent');
  LblFunctions_HeatingCharacteristicCurveParallelDisplacement    :FB_BA_Label:=( sObjName:='HPD',sDescr:='Heating characteristic curve parallel displacement');
  LblFunctions_HeatingCharacteristicCurveSteepness               :FB_BA_Label:=( sObjName:='HST',sDescr:='Heating characteristic curve steepness');
  LblFunctions_HeatingCircuitNightReduction                      :FB_BA_Label:=( sObjName:='NGT',sDescr:='Heating circuit night reduction');
  LblFunctions_Hysteresis                                        :FB_BA_Label:=( sObjName:='HYS',sDescr:='Hysteresis');
  LblFunctions_Calendar                                          :FB_BA_Label:=( sObjName:='CAL',sDescr:='Calendar');
  LblFunctions_RuntimeError                                      :FB_BA_Label:=( sObjName:='RUN',sDescr:='Runtime error');
  LblFunctions_LoopMAXLimit                                      :FB_BA_Label:=( sObjName:='LPX',sDescr:='Loop MAX limit');
  LblFunctions_LoopMINLimit                                      :FB_BA_Label:=( sObjName:='LPI',sDescr:='Loop MIN limit');
  LblFunctions_LoopObject                                        :FB_BA_Label:=( sObjName:='LP_',sDescr:='Loop object (controller object) – complex object');
  LblFunctions_LoopObjectCascadeSupplyAirTemperature             :FB_BA_Label:=( sObjName:='LP_',sDescr:='Cascade controller supply air temperature ');
  LblFunctions_LoopObjectCascadeSupplyAirHumidity                :FB_BA_Label:=( sObjName:='LP_',sDescr:='Cascade controller supply air humidity ');
  LblFunctions_MaximumValue                                      :FB_BA_Label:=( sObjName:='MAX',sDescr:='Maximum value');
  LblFunctions_MeasuredValue                                     :FB_BA_Label:=( sObjName:='MV_',sDescr:='Measured value');
  LblFunctions_MeasuredValueCalculated                           :FB_BA_Label:=( sObjName:='MVC',sDescr:='Measured value calculated');
  LblFunctions_MeasuredValueEast                                 :FB_BA_Label:=( sObjName:='MV_',sDescr:='Measured value East');
  LblFunctions_MeasuredValueNorth                                :FB_BA_Label:=( sObjName:='MV_',sDescr:='Measured value North');
  LblFunctions_MeasuredValueSouth                                :FB_BA_Label:=( sObjName:='MV_',sDescr:='Measured value South');
  LblFunctions_MeasuredValueWest                                 :FB_BA_Label:=( sObjName:='MV_',sDescr:='Measured value West');
  LblFunctions_MinimumValue                                      :FB_BA_Label:=( sObjName:='MIN',sDescr:='Minimum value');
  LblFunctions_Mean                                              :FB_BA_Label:=( sObjName:='MVL',sDescr:='Mean value');
  LblFunctions_FollowUpTime                                      :FB_BA_Label:=( sObjName:='FUT',sDescr:='Follow-up time');
  LblFunctions_ResetTime                                         :FB_BA_Label:=( sObjName:='RST',sDescr:='Reset time');
  LblFunctions_FeedbackDelay                                     :FB_BA_Label:=( sObjName:='TDF',sDescr:='Time delay feedback');
  LblFunctions_ObjectNotificationClass                           :FB_BA_Label:=( sObjName:='NC_',sDescr:='Notification class object');
  LblFunctions_EventClassObject                                  :FB_BA_Label:=( sObjName:='ECL',sDescr:='Event class');
  LblFunctions_Programobject                                     :FB_BA_Label:=( sObjName:='PRG',sDescr:='Program');
  LblFunctions_ProportionalBand                                  :FB_BA_Label:=( sObjName:='XP_',sDescr:='Proportional band');
  LblFunctions_FeedbackOPEN                                      :FB_BA_Label:=( sObjName:='FDO',sDescr:='Feedback OPEN');
  LblFunctions_FeedbackCLOSED                                    :FB_BA_Label:=( sObjName:='FDC',sDescr:='Feedback CLOSED');
  LblFunctions_FeedbackValue                                     :FB_BA_Label:=( sObjName:='FDB',sDescr:='Feedback value');
  LblFunctions_FeedbackErrorOPEN                                 :FB_BA_Label:=( sObjName:='FEO',sDescr:='Feedback error OPEN');
  LblFunctions_FeedbackErrorCLOSED                               :FB_BA_Label:=( sObjName:='FEC',sDescr:='Feedback error CLOSED');
  LblFunctions_Feedback                                          :FB_BA_Label:=( sObjName:='FDB',sDescr:='Feedback');
  LblFunctions_ExecutionControl                                  :FB_BA_Label:=( sObjName:='EXC',sDescr:='Execution control');
  LblFunctions_SwitchingCommand                                  :FB_BA_Label:=( sObjName:='SC_',sDescr:='Switching command');
  LblFunctions_Scheduler                                         :FB_BA_Label:=( sObjName:='SCH',sDescr:='Scheduler');
  LblFunctions_Setpoint                                          :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint');
  LblFunctions_SetpointComfortHeating                            :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint comfort heating');
  LblFunctions_SetpointPreComfortHeating                         :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint pre-comfort heating');
  LblFunctions_SetpointEconomyHeating                            :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint economy heating');
  LblFunctions_SetpointProtectionHeating                         :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint protection heating');
  LblFunctions_SetpointComfortCooling                            :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint comfort cooling');
  LblFunctions_SetpointPreComfortCooling                         :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint pre-comfort cooling');
  LblFunctions_SetpointEconomyCooling                            :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint economy cooling');
  LblFunctions_SetpointProtectionCooling                         :FB_BA_Label:=( sObjName:='SP_',sDescr:='Setpoint protection cooling');
  LblFunctions_SetpointBase                                      :FB_BA_Label:=( sObjName:='SPB',sDescr:='Base setpoint');
  LblFunctions_SetpointHeating                                   :FB_BA_Label:=( sObjName:='SPH',sDescr:='Heating setpoint');
  LblFunctions_SetpointCooling                                   :FB_BA_Label:=( sObjName:='SPC',sDescr:='Cooling setpoint');
  LblFunctions_SetpointMaximum                                   :FB_BA_Label:=( sObjName:='SPX',sDescr:='Setpoint, maximum');
  LblFunctions_SetpointMechanical                                :FB_BA_Label:=( sObjName:='SPM',sDescr:='Setpoint, mechanical');
  LblFunctions_SetpointMinimum                                   :FB_BA_Label:=( sObjName:='SPI',sDescr:='Setpoint, minimum');
  LblFunctions_SetpointNight                                     :FB_BA_Label:=( sObjName:='SPN',sDescr:='Night setpoint');
  LblFunctions_SetpointDay                                       :FB_BA_Label:=( sObjName:='SPD',sDescr:='Day setpoint');
  LblFunctions_SetpointAdjuster                                  :FB_BA_Label:=( sObjName:='SPA',sDescr:='Setpoint adjuster');
  LblFunctions_SetpointAdjustmentMechanical                      :FB_BA_Label:=( sObjName:='SPA',sDescr:='Setpoint adjustment, mechanical');
  LblFunctions_Selection                                         :FB_BA_Label:=( sObjName:='SEL',sDescr:='Selection');
  LblFunctions_Status                                            :FB_BA_Label:=( sObjName:='STA',sDescr:='Status');
  LblFunctions_ControlSignal                                     :FB_BA_Label:=( sObjName:='CS_',sDescr:='Control signal');
  LblFunctions_Fault                                             :FB_BA_Label:=( sObjName:='FAU',sDescr:='Fault');
  LblFunctions_FaultFuse                                         :FB_BA_Label:=( sObjName:='FAU',sDescr:='Fuse fault ');
  LblFunctions_Button                                            :FB_BA_Label:=( sObjName:='BUT',sDescr:='Button');
  LblFunctions_DeadZone                                          :FB_BA_Label:=( sObjName:='DZ_',sDescr:='Dead zone');
  LblFunctions_ObjectTrendLogMultiple                            :FB_BA_Label:=( sObjName:='TRM',sDescr:='Trend log multiple object');
  LblFunctions_ObjectTrendLog                                    :FB_BA_Label:=( sObjName:='TR_',sDescr:='Trend log object');
  LblFunctions_AmplificationController                           :FB_BA_Label:=( sObjName:='KP_',sDescr:='Amplification controller');
  LblFunctions_RetentionPeriod                                   :FB_BA_Label:=( sObjName:='TV_',sDescr:='Retention period');
  LblFunctions_MaintenanceMessage                                :FB_BA_Label:=( sObjName:='MTM',sDescr:='Maintenance message');
  LblFunctions_Efficiency                                        :FB_BA_Label:=( sObjName:='EFC',sDescr:='Efficiency');
  LblFunctions_CountValue                                        :FB_BA_Label:=( sObjName:='CNT',sDescr:='Count value');
  LblFunctions_TimeProgram                                       :FB_BA_Label:=( sObjName:='TPR',sDescr:='Time program');
// Beckhoff Scale
  LblFunctions_ValueX1                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X1]');
  LblFunctions_ValueX2                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X2]');
  LblFunctions_ValueX3                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X3]');
  LblFunctions_ValueX4                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X4]');
  LblFunctions_ValueX5                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X4]');
  LblFunctions_ValueX6                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X4]');
  LblFunctions_ValueX7                                           :FB_BA_Label:=( sObjName:='IPX',sDescr:='Value interpolation point [X4]');
  LblFunctions_ValueY1                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y1]');
  LblFunctions_ValueY2                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y2]');
  LblFunctions_ValueY3                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y3]');
  LblFunctions_ValueY2_3                                         :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y2-Y3]');
  LblFunctions_ValueY4                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y4]');
  LblFunctions_ValueY5                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y4]');
  LblFunctions_ValueY6                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y4]');
  LblFunctions_ValueY7                                           :FB_BA_Label:=( sObjName:='IPY',sDescr:='Value interpolation point [Y4]');
  LblFunctions_SuppyAirTempSetpointHeaterCalc                    :FB_BA_Label:=( sObjName:='SPC',sDescr:='Supply air Temperature setpoint heater calculated');
  LblFunctions_SuppyAirTempSetpointCoolerCalc                    :FB_BA_Label:=( sObjName:='SPC',sDescr:='Supply air Temperature setpoint cooler calculated');
  LblFunctions_SuppyAirTempSetpointERCCalc                       :FB_BA_Label:=( sObjName:='SPC',sDescr:='Supply air Temperature setpoint ERC calculated');
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>