<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_BA_TrendLogging" Id="{c66a71d4-cea6-4416-8e55-61cc71db2e16}" SpecialFunc="None">
    <Declaration><![CDATA[{region '#Template'}
	{attribute 'Version' := '1.2.1.0'}
	{attribute 'Tags' := '"LCID": "1031", "Text": "Universal, Control, Trend"'}
	{attribute 'Tags' := '"LCID": "1033", "Text": "Universal, Control, Trend"'}
	{attribute 'Using' := '"Type": "Template", "URI": "EC_AMEV"'}
	{attribute 'Using' := '"Type": "Template", "URI": "BA2_Param"'}
	{attribute 'Description' := '"LCID": "1031", "Text": "Trend"'}
	{attribute 'Description' := '"LCID": "1033", "Text": "Trend"'}
{endregion}			 
FUNCTION_BLOCK FB_BA_TrendLogging EXTENDS FB_BA_View
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR_INPUT CONSTANT
	Trends						: ARRAY[1..TREND_COUNT] OF FB_BA_Trend;								
END_VAR
VAR
	i							: UDINT;
END_VAR
VAR CONSTANT
	TREND_COUNT						: UDINT := 30;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

FOR i := 1 TO TREND_COUNT DO
	Trends[i]();
END_FOR
]]></ST>
    </Implementation>
    <Method Name="FB_init" Id="{0b7f1b57-d8a3-4221-aa2c-f2c7e43f1646}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR 
VAR
	sIdx	: STRING;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 1 TO TREND_COUNT DO
	sIdx := CONCAT(TO_STRING(i),'}');;

	Trends[i].iParent					:= THIS^;
	Trends[i].iLabel					:= LblFunctions_ObjectTrendLog;
	Trends[i].sObjectName				:= CONCAT('{Idx=',sIdx);
	Trends[i].bEnable					:= BA2_Param.bTrend_DefLogEnable;
	Trends[i].stStartTime				:= BA2_Param.stTrend_DefStartTime;
	Trends[i].stStopTime				:= BA2_Param.stTrend_DefStopTime;	
	Trends[i].nLogInterval 				:= BA2_Param.nTrend_DefLogInterval;
	Trends[i].bStopOnFull				:= BA2_Param.bTrend_DefStopOnFull;
	Trends[i].nBufferSize 				:= BA2_Param.nTrend_BufferSize;
	Trends[i].eLoggingType				:= BA2_Param.eTrend_DefLoggingType;	
	Trends[i].nEventClassID				:= EC_ID.NC80;
	Trends[i].nNotificationThreshold	:= BA2_Param.nTrend_DefNotificationThreshold;
	Trends[i].aEventTransitionText[1]	:= txtEvent_Offnormal;
	Trends[i].aEventTransitionText[2]	:= txtEvent_None;
	Trends[i].aEventTransitionText[3]	:= txtEvent_Normal;
	Trends[i].bEventDetectionEnable		:= FALSE;
	Trends[i].aEventEnable[1]			:= TRUE;			//	to_offnormal
	Trends[i].aEventEnable[2]			:= TRUE;			//	to_fault
	Trends[i].aEventEnable[3]			:= TRUE;			//	to_normal	
	Trends[i].bAcknowledgeRm			:= FALSE;		
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_BA_TrendLogging">
      <LineId Id="9" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_BA_TrendLogging.FB_init">
      <LineId Id="8" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="138" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="153" Count="2" />
      <LineId Id="157" Count="0" />
      <LineId Id="167" Count="1" />
      <LineId Id="166" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>